@@ -160,7 +160,10 @@ class P4A_I18N
 	public function translate($string)
 	{
 		if (strlen($string) == 0) return '';
-		return $this->_translation_engine->translate($string, $this->locale);
+		$translation = $this->_translation_engine->translate($string, $this->locale);
+		$is_translated = $this->_translation_engine->isTranslated($string, $this->locale);
+		p4a::singleton()->actionHandler('ontranslate', $string, $translation, $is_translated);
+		return $translation;
 	}
 
 	/**
